--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,36 @@ button {
   border: none;
   border-radius: 10px;
 }
+
+.game-header {
+  font-family: "Quantico", sans-serif;
+  font-size: 96px;
+  font-weight: 700;
+  font-style: italic;
+  color: white;
+}
+
+.game-subheader {
+  font-family: "Quantico", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  font-style: italic;
+  color: white;
+  margin-bottom: 24px;
+}
+
+.game-btn {
+  font-size: 24px;
+  padding: 10px 20px;
+  margin: 20px;
+  background-color: purple;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 150ms ease;
+}
+
+.game-btn:hover {
+  background-color: #6a1b9a;
+}
